--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "framer-motion": "^12.15.0",
+    "lucide-react": "^0.511.0",
     "next": "15.3.2",
     "postcss": "^8.5.4",
     "react": "^19.0.0",
